--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,23 +1,54 @@
 body {
-  padding-top: 60px;
+  padding-top: 50px;
 }
 
-.sidebar {
-  position: fixed;
-  top: 51px;
-  bottom: 0;
-  left: 0;
-  z-index: 1000;
+.google-pagination {
+  text-align: center;
+}
+
+.google-pagination .csb {
+  height: 40px;
   display: block;
-  padding: 5px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  background-color: #f5f5f5;
-  border-right: 1px solid #eee;
 }
 
-.tab-content {
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-top: 0px solid transparent;
+.google-pagination .csb.prev {
+  background:url(https://www.google.co.in/images/nav_logo195_hr.png) no-repeat;
+  background-position:0 0;
+  background-size:167px;
+  width:53px;
+}
+
+.google-pagination .csb.noprev {
+  background:url(https://www.google.co.in/images/nav_logo195_hr.png) no-repeat;
+  background-position:-24px 0 !important;
+  background-size:167px;
+  width:53px !important;
+}
+
+.google-pagination .csb.active {
+  background:url(https://www.google.co.in/images/nav_logo195_hr.png) no-repeat;
+  background-position:-53px 0;
+  background-size:167px;
+  width:20px;
+}
+
+.google-pagination .csb.nonactive {
+  background:url(https://www.google.co.in/images/nav_logo195_hr.png) no-repeat;
+  background-position:-74px 0;
+  background-size:167px;
+  width:20px;
+}
+
+.google-pagination .csb.nonext {
+  background:url(https://www.google.co.in/images/nav_logo195_hr.png) no-repeat;
+  background-position:-74px 0 0;
+  background-size:167px;
+  width:20px !important;
+}
+
+.google-pagination .csb.next {
+  background:url(https://www.google.co.in/images/nav_logo195_hr.png) no-repeat;
+  background-position:-96px 0 !important;
+  background-size:167px;
+  width:71px;
 }
