--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,13 @@
 body {
-  padding-top: 50px;
+  padding-top: 500px;
 }
 
 .google-pagination {
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .google-pagination .csb {
@@ -20,9 +24,9 @@ body {
 
 .google-pagination .csb.noprev {
   background:url(https://www.google.co.in/images/nav_logo195_hr.png) no-repeat;
-  background-position:-24px 0 !important;
-  background-size:167px;
-  width:53px !important;
+  background-position: -24px 0 !important;
+  background-size: 167px;
+  width: 28px !important;
 }
 
 .google-pagination .csb.active {
@@ -41,14 +45,14 @@ body {
 
 .google-pagination .csb.nonext {
   background:url(https://www.google.co.in/images/nav_logo195_hr.png) no-repeat;
-  background-position:-74px 0 0;
+  background-position:-96px 0 !important;
   background-size:167px;
-  width:20px !important;
+  width:45px !important;
 }
 
 .google-pagination .csb.next {
   background:url(https://www.google.co.in/images/nav_logo195_hr.png) no-repeat;
-  background-position:-96px 0 !important;
+  background-position:-96px 0;
   background-size:167px;
   width: 71px;
 }
